@@ -16,16 +16,23 @@ class TrainingTypeMapperTest {
     private final TrainingTypeMapper mapper = Mappers.getMapper(TrainingTypeMapper.class);
 
     @Test
-    void testToDtoList() {
+    void toDtoList() {
         TrainingType trainingType1 = new TrainingType(1, "YOGA");
         TrainingType trainingType2 = new TrainingType(2, "ZUMBA");
         List<TrainingType> trainingTypes= List.of(trainingType1, trainingType2);
 
         List<TrainingTypeDto> dtoList = mapper.toDtoList(trainingTypes);
 
-        assertEquals(trainingType1.getId(), dtoList.get(0).getId());
-        assertEquals(trainingType1.getName(), dtoList.get(0).getName());
-        assertEquals(trainingType2.getId(), dtoList.get(1).getId());
-        assertEquals(trainingType2.getName(), dtoList.get(1).getName());
+        assertEquals(trainingType1.getId(), dtoList.getFirst().getId());
+        assertEquals(trainingType1.getName(), dtoList.getFirst().getName());
+        assertEquals(trainingType2.getId(), dtoList.getLast().getId());
+        assertEquals(trainingType2.getName(), dtoList.getLast().getName());
+    }
+
+    @Test
+    void toDtoListWithNullList() {
+        List<TrainingTypeDto> dtoList = mapper.toDtoList(null);
+
+        assertNull(dtoList);
     }
 }
